--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,14 +2,14 @@
     <div class="logo">
         Logo will come here
     </div>
-    <nav>
+    <!-- <nav>
         <ul class="main-nav flex">
             <li> <a class="{% if page.url == '/' %}selected-nav{% endif %}" href="index.html">All Feeds</a> </li>
             <li> <a class="{% if page.url == '/kisses.html' %}selected-nav{% endif %}" href="kisses.html">Kisses</a> </li>
             <li> <a class="{% if page.url == '/pukes.html' %}selected-nav{% endif %}" href="pukes.html">Pukes</a> </li>
         </ul>
-    </nav>
+    </nav> -->
     <div class="about-sec">
-        <a class="{% if page.url == '/about.html' %}selected-nav{% endif %}" href="about.html">About us</a>
+        <a class="{% if page.url == '{{ site.baseurl }}/about.html' %}selected-nav{% endif %}" href="about.html">About us</a>
     </div>
 </div>
