logo linked to home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="flex header">
-    <div class="logo">
+    <a href="/" class="logo">
         Logo will come here
-    </div>
+    </a>
     <!-- <nav>
         <ul class="main-nav flex">
             <li> <a class="{% if page.url == '/' %}selected-nav{% endif %}" href="index.html">All Feeds</a> </li>
