--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -11,7 +11,7 @@
         </div>
         <div class="post-author-share flex">
             <div class="post-author">
-                Observed by <span><a href="#">{{ data.author }}</a></span>
+                Observed by <span><a href="{{ data.authurl }}" target="_blank">{{ data.author }}</a></span>
             </div>
             <div class="post-share flex">
                 <div>
