--- a/_includes/pagination-code.html
+++ b/_includes/pagination-code.html
@@ -9,7 +9,7 @@
             </li>
           {% else %}
             <li>
-              <a href="/page{{paginator.previous_page}}">&laquo;</a>
+              <a href="{{ site.baseurl }}/page{{paginator.previous_page}}">&laquo;</a>
             </li>
           {% endif %}
         {% else %}
@@ -33,13 +33,13 @@
             </li>
           {% else %}
             <li>
-              <a href="/page{{count}}">{{count}}</a>
+              <a href="{{ site.baseurl }}/page{{count}}">{{count}}</a>
             </li>
           {% endif %}
         {% endfor %}
         {% if paginator.next_page %}
           <li>
-            <a href="/page{{paginator.next_page}}">&raquo;</a>
+            <a href="{{ site.baseurl }}/page{{paginator.next_page}}">&raquo;</a>
           </li>
         {% else %}
           <li class="disabled">
