--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="flex header">
-    <a href="/" class="logo">
+    <a href="{{ site.baseurl }}" class="logo">
         Logo will come here
     </a>
     <!-- <nav>
