--- a/_includes/pagination-code.html
+++ b/_includes/pagination-code.html
@@ -5,7 +5,7 @@
         {% if paginator.previous_page %}
           {% if paginator.previous_page == 1 %}
             <li>
-              <a href="/">&laquo;</a>
+              <a href="{{ site.baseurl }}">&laquo;</a>
             </li>
           {% else %}
             <li>
@@ -23,7 +23,7 @@
           </li>
         {% else %}
           <li>
-            <a href="/">1</a>
+            <a href="{{ site.baseurl }}">1</a>
           </li>
         {% endif %}
         {% for count in (2..paginator.total_pages) %}
