resolved emojis issues

--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -1,7 +1,7 @@
 <div class="post-main-container flex">
     <div class="post-content">
         <div class="post-category">
-            <img src="{{ site.baseurl }}/assets/images/{{ data.cat }}.png" alt="">
+            <img src="{{ site.baseurl }}/assets/images/{{ data.categories }}.png" alt="">
         </div>
         <div class="post-title">
             {{ data.title }}
