--- a/_includes/body-content.html
+++ b/_includes/body-content.html
@@ -25,6 +25,6 @@
     </div>
 
     <div class="post-media">
-        <img src="{{ site.baseurl }}/assets/images/{{ data.imagename }}.jpg" alt="{{ data.imagename }}">
+        <img src="{{ site.baseurl }}/assets/images/{{ data.imagename }}" alt="{{ data.imagename }}">
     </div>
 </div>
