changed base url path in header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="flex header">
-    <a href="{{ site.baseurl }}" class="logo">
-        <img src="{{ site.baseurl }}/assets/images/kiss-puke-logo.png" alt="">
+    <a href="{{ site.baseurl }}/" class="logo">
+        <img src="{{ site.baseurl }}/assets/images/kiss-puke-logo.svg" alt="">
     </a>
     <nav>
         <ul class="main-nav flex">
